# FIX-FastTrade

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .readthedocs.yml  CMakeLists.txt  Doxyfile.in  README.md
.cache/clangd/index/: Application.cpp.04FC863651D20893.idx  Application.h.0FD22BE8EF9B3FC2.idx  ApplicationTest.cpp.029405FD8A9654B2.idx  Config.cpp.B4D857D47D090324.idx  Config.h.D8F9D2DB63BA22F4.idx  ConfigTest.cpp.5BFE839E2A9CCD79.idx  FixService.cpp.FA15A73DE97E42D5.idx  FixService.h.21762D1244B07E33.idx  FixServiceTest.cpp.E664A9B73C7A8E77.idx  Message.cpp.988FBAA285F90B80.idx  Message.h.75AAC9CFD20E69F4.idx  MessageParser.cpp.8678BF50739A2665.idx  MessageParser.h.9ED0C6E1C39C7015.idx  MessageParserTest.cpp.A63618FAF1A127F2.idx  MessageTest.cpp.B237249A577E278D.idx  Order.cpp.913BD34D5FF66858.idx  Order.h.523DF334B3688DBF.idx  OrderTest.cpp.3B8A96D9217A2CAF.idx  Session.cpp.E2E403BD130A41D0.idx  Session.h.DB07B65A52D3DD25.idx  SessionTest.cpp.0A1B35BD741A1F4A.idx  Trade.cpp.435FC790AEBC4424.idx  Trade.h.9D9C7E9DB855089D.idx  TradeTest.cpp.3256F91D891F45BD.idx  TradingService.cpp.E53B5AC5D26F47C2.idx  TradingService.h.0FEED01FFD3311D3.idx  TradingServiceTest.cpp.A1341CA2D663C80F.idx
docs/: building.md  conf.py  index.rst  quickfix_installation.md  user_guide.md
docs/api/: fix_api.md  model_api.md  service_api.md
docs/design/: architecture.md  fix_protocol.md  trading_system.md
docs/readthedocs/: conf.py  index.rst  requirements.txt
include/fix/: Application.h  Config.h  Message.h  MessageParser.h  Session.h
include/model/: Order.h  Trade.h
include/service/: FixService.h  TradingService.h
src/fix/: Application.cpp  Config.cpp  Message.cpp  MessageParser.cpp  Session.cpp
src/model/: Order.cpp  Trade.cpp
src/service/: FixService.cpp  TradingService.cpp
tests/: CMakeLists.txt
tests/fix/: ApplicationTest.cpp  ConfigTest.cpp  MessageParserTest.cpp  MessageTest.cpp  SessionTest.cpp
tests/model/: OrderTest.cpp  TradeTest.cpp
tests/service/: FixServiceTest.cpp  TradingServiceTest.cpp
tools/scripts/: generate_docs.sh
